l changed h1 and added 3 pharagrah. and l add colors for p

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <h1>Azerbaijan Flag</h1>
+    <p class="p1">BLUE</p>
+    <p class="p2">RED</p>
+    <p class="p3">GREEN</p>
 </body>
 
 </html>
